# nlamagent

./: .gitignore  Makefile  Makefile.am  README.md  client.sh  configure.ac  mkpdb.sh  prep-nsis.sh
include/: config.h  crypto.h  log.h  net.h  opts.h  packet.h  perform.h  ssl.h
nsis/: agent.nsi
nsis/TESTING/: test.nsi
packets/: adduser-s.json  adduser.json  adduser2.json  chpw.json  chpw2.json  delete.json  noop.json  setpw.json
src/: config.c  crypto.c  log.c  main.c  net.c  packet.c  perform.c  ssl.c
